fix: break too long method return with CSS break-work

--- a/src/Resources/themes/default/css/doctum.css
+++ b/src/Resources/themes/default/css/doctum.css
@@ -336,6 +336,10 @@ a abbr {
     font-size: 90%;
 }
 
+.type {
+    overflow-wrap: break-word;
+}
+
 /* Namespaces page */
 
 .namespaces {
